k8s-istio-manifests/mysql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
    - name: mysql
      port: 3306
  selector:
    app: mysqlapp-ms
    tier: mysql
  clusterIP: None
