k8s-istio-manifests/phpmyadmin-istio-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: phpmyadmin-lamp-gw
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "phpmyadmin-lamp.hanif.sebelassatu.net"
